# Cherry-UI

./: README.md  install.sh  opiumware.rs  package-lock.json  userinst.sh
.github/workflows/: build.yml
Cherry/: README.md
Cherry/.github/workflows/: build.yml
Cherry/src/: index.html  main.js
Cherry/src-tauri/: tauri.conf.json
Cherry/src-tauri/icons/: icon.icns
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
