[package]
name = "tauri-app"
version = "0.1.0"
description = "Cherry – Tauri executor UI"
authors = ["you"]
edition = "2021"

# macOS 11.0+ minimum
[package.metadata.bundle]
osx_minimum_system_version = "11.0"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
